--- a/src/epub/text/part-1.xhtml
+++ b/src/epub/text/part-1.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-1" epub:type="part">
 			<h2>Part One</h2>
-			<p>In which the Little Nugget is introduced to the reader, and plans are made for his future by several interested parties. In which, also, the future Mr. Peter Burns is touched upon. The whole concluding with a momentous telephone-call.</p>
+			<p>In which the Little Nugget is introduced to the reader, and plans are made for his future by several interested parties. In which, also, the future <abbr epub:type="z3998:name-title">Mr.</abbr> Peter Burns is touched upon. The whole concluding with a momentous telephone-call.</p>
 		</section>
 	</body>
 </html>
