--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -12,10 +12,147 @@
 				</li>
 				<li>
 					<a href="text/imprint.xhtml">Imprint</a>
+				<li>
+					<a href="text/part-1.xhtml">I</a>
+				</li>
+					<ol>
+						<li>
+							<a href="text/chapter-1-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-1.xhtml#chapter-1-1-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/part-2.xhtml">II</a>
 				</li>
+					<ol>
+					<li>
+						<a href="text/chapter-2-1.xhtml">I</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-1.xhtml#chapter-2-1-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-1.xhtml#chapter-2-1-2" epub:type="z3998:roman">II</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-1.xhtml#chapter-2-1-3" epub:type="z3998:roman">III</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-2.xhtml">II</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-3.xhtml">III</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-4.xhtml">IV</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-4.xhtml#chapter-2-4-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-4.xhtml#chapter-2-4-2" epub:type="z3998:roman">II</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-5.xhtml">V</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-6.xhtml">VI</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-6.xhtml#chapter-2-6-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-6.xhtml#chapter-2-6-2" epub:type="z3998:roman">II</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-7.xhtml">VII</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-8.xhtml">VIII</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-8.xhtml#chapter-2-8-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-8.xhtml#chapter-2-8-2" epub:type="z3998:roman">II</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-8.xhtml#chapter-2-8-3" epub:type="z3998:roman">III</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-9.xhtml">IX</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-9.xhtml#chapter-2-9-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-9.xhtml#chapter-2-9-2" epub:type="z3998:roman">II</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-10.xhtml">X</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-11.xhtml">XI</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-12.xhtml">XII</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-12.xhtml#chapter-2-12-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-12.xhtml#chapter-2-12-2" epub:type="z3998:roman">II</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-13.xhtml">XIII</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-14.xhtml">XIV</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-14.xhtml#chapter-2-14-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-14.xhtml#chapter-2-14-2" epub:type="z3998:roman">II</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-15.xhtml">XV</a>
+						<ol>
+							<li>
+								<a href="text/chapter-2-15.xhtml#chapter-2-15-1" epub:type="z3998:roman">I</a>
+							</li>
+							<li>
+								<a href="text/chapter-2-15.xhtml#chapter-2-15-2" epub:type="z3998:roman">II</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="text/chapter-2-16.xhtml">XVI</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-17.xhtml">XVII</a>
+					</li>
+					<li>
+						<a href="text/chapter-2-18.xhtml">XVIII</a>
+					</li>
+				</ol>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
@@ -28,7 +165,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1-1.xhtml" epub:type="bodymatter">The Little Nugget</a>
 				</li>
 			</ol>
 		</nav>
