Fix heading semantication

--- a/src/epub/text/part-2.xhtml
+++ b/src/epub/text/part-2.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-2" epub:type="part">
-			<h2 epub:type="ordinal z3998 roman">II</h2>
+			<h2 epub:type="ordinal z3998:roman">II</h2>
 			<p>In which other interested parties, notably one Buck MacGinnis and a trade rival, Smooth Sam Fisher, make other plans for the Nugget’s future. Of stirring times at a private school for young gentlemen. Of stratagems, spoils, and alarms by night. Of journeys ending in lovers’ meetings. The whole related by <abbr epub:type="z3998:name-title">Mr.</abbr> Peter Burns, gentleman of leisure, who forfeits that leisure in a good cause.</p>
 		</section>
 	</body>
