--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 							<a href="text/chapter-1-1.xhtml" epub:type="z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-1-1.xhtml#chapter-1-1-2" epub:type="z3998:roman">II</a>
+							<a href="text/chapter-1-2.xhtml" epub:type="z3998:roman">II</a>
 						</li>
 					</ol>
 				</li>
