Change metadata to HathiTrust scan rather than Internet Archive

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/6683">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
-			<a href="https://archive.org/details/thelittlenugget06683gut">Internet Archive</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/012347882">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">One Dollar Silver Certificate</i>,<br/>
 			a painting completed about 1910 by<br/>
